Added IC 3418 project, description and publication, and images with modal.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -110,8 +110,7 @@
 					HI gas removed from the outside-in, a one-sided tail of HI gas, and an undisturbed stellar disk (Kenney et al.
 					<a target="_blank" href="https://arxiv.org/abs/astro-ph/0403103">2004</a>). It was the first galaxy shown to have star formation in the ram pressure stripped tail (Kenney &amp; Koopmann
 					1999), a phenomenon now known as a “jellyfish galaxy”. High resolution HST images (Abramson et al.
-					<a target="_blank"
-					 href="https://arxiv.org/abs/1401.0023">2014</a>,
+					<a target="_blank" href="https://arxiv.org/abs/1401.0023">2014</a>,
 					<a target="_blank" href="https://arxiv.org/abs/1604.01883">2016</a>) show small dust clouds that are dense enough to resist the initial stripping, so become decoupled from the
 					rest of the stripped ISM, but then become ablated to form linear filamentary clouds. </p>
 			</div>
@@ -124,7 +123,8 @@
 					<img class="zoom" src="../images/n4522-kk99-ha+r-3panel.gif" onclick="openModal(2);currentImg(2, 2)" alt="NGC 4522 H-alpha + R 3-panel">
 				</div>
 				<div class="grid-item-img">
-					<img class="zoom" src="../images/n4522-hstimage-colombari-right-orientation.jpg" onclick="openModal(2);currentImg(3, 2)" alt="NGC 4522 HST">
+					<img class="zoom" src="../images/n4522-hstimage-colombari-right-orientation.jpg" onclick="openModal(2);currentImg(3, 2)"
+					 alt="NGC 4522 HST">
 				</div>
 				<div class="grid-item-img">
 					<img class="zoom" src="../images/n4522-hst-color-nolabel-bigger.jpg" onclick="openModal(2);currentImg(4, 2)" alt="NGC 4522 HST color no labels">
@@ -155,7 +155,8 @@
 				<h2 class="center"> Ram Pressure Stripping in NGC 4402 </h2>
 				<p> The spiral galaxy NGC 4402 is a great example of active ram pressure stripping in the Virgo Cluster. Whereas NGC 4522
 					is moving away from us in the cluster, NGC 4402 is moving toward us, so that the leading side of the ram pressure interaction
-					is the near side. Thus we can see the strong impacts on the leading side more clearly. HST images (Abramson et al. <a target="_blank" href="https://arxiv.org/abs/1401.0023">2014</a>,
+					is the near side. Thus we can see the strong impacts on the leading side more clearly. HST images (Abramson et al.
+					<a target="_blank" href="https://arxiv.org/abs/1401.0023">2014</a>,
 					<a target="_blank" href="https://arxiv.org/abs/1604.01883">2016</a>) show that the outer disk has virtually no dust, since it has been stripped by ram pressure. Iirregular filaments
 					of dust blown out of the galaxy can be seen extending to the northwest (upper right). Near the outer edge of the stripped
 					dust disk, there are 2 large linear filaments that protrude outwards beyond the main stripping radius. These originate
@@ -189,6 +190,48 @@
 				<img class="modal-content-3" src="../images/n4402-hst-labelled-rps-features.jpg" alt="NGC 4402 HST features labelled">
 				<img class="modal-content-3" src="../images/ngc4402-hst-east-filament.jpg" alt="NGC 4402 HST east filament">
 				<img class="modal-content-3" src="../images/ngc4402-hst-3filaments.jpg" alt="NGC HST 3 filaments">
+			</div>
+		</section>
+
+		<!-- Project -->
+		<section>
+			<div>
+				<h2 class="center"> Star Formation via Ram Pressure Stripping in IC 3418 </h2>
+				<p> IC3418 is a dwarf galaxy in the Virgo Cluster that is in the process of transforming from a late type dwarf to an early
+					type dwarf (“dwarf elliptical”) due to ram pressure stripping. It stopped forming stars 200 Myr ago and has no gas,
+					but does have a spectacular tail of young stars that is prominent in the UV (GALEX image), formed by ram pressure stripping.
+					Many of the young stars in the tail form linear parallel streams with HII regions of ionized gas at the heads. These
+					features have been called “fireballs”, and probably form as ram pressure continues to accelerate the gas, but doesn’t
+					affect the stars which therefor get left behind, as depicted in the cartoon (Kenney et al.
+					<a target="_blank" href="https://arxiv.org/abs/1311.5501">2014</a>). </p>
+			</div>
+			<!-- Images for IC 3418 -->
+			<div class="grid-container">
+				<div class="grid-item-img">
+					<img class="zoom" src="../images/IC_3418_UV+opt.jpg" onclick="openModal(4);currentImg(1, 4)" alt="IC 3418 UV and opical">
+				</div>
+				<div class="grid-item-img">
+					<img class="zoom" src="../images/ic3418-in-virgo.PNG" onclick="openModal(4);currentImg(2, 4)" alt="IC 3418 in Virgo Cluster">
+				</div>
+				<div class="grid-item-img">
+					<img class="zoom" src="../images/ic3418-Halpha+NUV-fireballs.jpg" onclick="openModal(4);currentImg(3, 4)" alt="IC 3418 H-alpha and near-UV and 'fireballs'">
+				</div>
+				<div class="grid-item-img">
+					<img class="zoom" src="../images/ic3418-fireball-cartoon.gif" onclick="openModal(4);currentImg(4, 4)" alt="IC 3418 fireball cartoon">
+				</div>
+			</div>
+			<!-- Modal popup -->
+			<div id="modal-4">
+				<!-- Close button -->
+				<span class="close" onclick="closeModal(4)">&times;</span>
+				<!-- Modal left / right navigation -->
+				<span class="prev" onclick="changeImg(-1, 4)">&#10094;</span>
+				<span class="next" onclick="changeImg(1, 4)">&#10095;</span>
+				<!-- Modal Images -->
+				<img class="modal-content-4" src="../images/IC_3418_UV+opt.jpg" alt="IC 3418 UV and opical">
+				<img class="modal-content-4" src="../images/ic3418-in-virgo.PNG" alt="IC 3418 in Virgo Cluster">
+				<img class="modal-content-4" src="../images/ic3418-Halpha+NUV-fireballs.jpg" alt="IC 3418 H-alpha and near-UV and 'fireballs'">
+				<img class="modal-content-4" src="../images/ic3418-fireball-cartoon.gif" alt="IC 3418 fireball cartoon">
 			</div>
 		</section>
 
