--- a/pages/projects.html
+++ b/pages/projects.html
@@ -41,7 +41,7 @@
 	<main role="main">
 
 		<!-- Project -->
-		<section class="content-wrap">
+		<section>
 			<!-- Project description -->
 			<div>
 				<h2 class="center"> Gas Filaments from the Collision between the Giant Virgo Elliptical M86 and the Spiral Galaxy NGC 4438. </h2>
