Begun styling modals.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -92,8 +92,11 @@
 				<!-- Modal left / right navigation -->
 				<span class="prev" onclick="changeImg(-1, 1)">&#10094;</span>
 				<span class="next" onclick="changeImg(1, 1)">&#10095;</span>
-				<!-- Modal Images -->
-				<img class="modal-content-1" src="../images/ngc4921_colombari_rotated.jpg" alt="NGC 4291 HST">
+				<!-- Modal Images and captions -->
+				<div class="modal-content-1">
+					<img src="../images/ngc4921_colombari_rotated.jpg" alt="NGC 4291 HST">
+					<p> A description for an image. </p>
+				</div>
 				<img class="modal-content-1" src="../images/ngc4921-color-hi-medium.jpg" alt="NGC 4291 HI labeled">
 				<img class="modal-content-1" src="../images/ngc4921-fig2.jpg" alt="NGC 4291 dust front">
 				<img class="modal-content-1" src="../images/n4921-hst-columbari-rotated+labels-small.jpg" alt="NGC 4291 zoom sections">
