Added basic descriptions and styling for first project (that has modal box)

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -93,15 +93,31 @@
 				<span class="prev" onclick="changeImg(-1, 1)">&#10094;</span>
 				<span class="next" onclick="changeImg(1, 1)">&#10095;</span>
 				<!-- Modal Images and captions -->
+				<!-- A container for modal picture and description -->
 				<div class="modal-content-1">
 					<img src="../images/ngc4921_colombari_rotated.jpg" alt="NGC 4291 HST">
-					<p> A description for an image. </p>
+					<p> A Hubble Space Telescope image of NGC 4921. </p>
 				</div>
-				<img class="modal-content-1" src="../images/ngc4921-color-hi-medium.jpg" alt="NGC 4291 HI labeled">
-				<img class="modal-content-1" src="../images/ngc4921-fig2.jpg" alt="NGC 4291 dust front">
-				<img class="modal-content-1" src="../images/n4921-hst-columbari-rotated+labels-small.jpg" alt="NGC 4291 zoom sections">
-				<img class="modal-content-1" src="../images/ngc4921-fig3.jpg" alt="NGC 4291 dust front">
-				<img class="modal-content-1" src="../images/ngc4921-fig4.jpg" alt="NGC 4291 dust front">
+				<div class="modal-content-1">
+					<img src="../images/ngc4921-color-hi-medium.jpg" alt="NGC 4291 HI labeled">
+					<p> Hubble Space Telescope image of NGC 4921 with labeled HI regions. </p>
+				</div>
+				<div class="modal-content-1">
+					<img src="../images/ngc4921-fig2.jpg" alt="NGC 4291 dust front">
+					<p> Zoom in on the dust front showing the filaments. </p>
+				</div>
+				<div class="modal-content-1">
+					<img src="../images/n4921-hst-columbari-rotated+labels-small.jpg" alt="NGC 4291 zoom sections">
+					<p> Hubble Space Telescope image with indicated zoom-in regions. </p>
+				</div>
+				<div class="modal-content-1">
+					<img src="../images/ngc4921-fig3.jpg" alt="NGC 4291 dust front">
+					<p> Super zoom-ins on the galaxies dust filaments. </p>
+				</div>
+				<div class="modal-content-1">
+					<img src="../images/ngc4921-fig4.jpg" alt="NGC 4291 dust front">
+					<p> Super zoom-ins on the galaxies dust filaments </p>
+				</div>
 			</div>
 		</section>
 
