added placeholder descriptions to projects.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -160,11 +160,26 @@
 				<span class="prev" onclick="changeImg(-1, 2)">&#10094;</span>
 				<span class="next" onclick="changeImg(1, 2)">&#10095;</span>
 				<!-- Modal Images -->
-				<img class="modal-content-2" src="../images/ngc4522-HI+Roptical.gif" alt="NGC 4522 HI">
-				<img class="modal-content-2" src="../images/n4522-kk99-ha+r-3panel.gif" alt="NGC 4522 H-alpha + R 3-panel">
-				<img class="modal-content-2" src="../images/n4522-hstimage-colombari-right-orientation.jpg" alt="NGC 4522 HST">
-				<img class="modal-content-2" src="../images/n4522-hst-color-nolabel-bigger.jpg" alt="NGC 4522 HST color no labels">
-				<img class="modal-content-2" src="../images/4522-structures-labelled.jpg" alt="NGC 4522 structures labelled">
+				<div class="modal-content-2">
+					<img src="../images/ngc4522-HI+Roptical.gif" alt="NGC 4522 HI">
+					<p> desription. </p>
+				</div>
+				<div class="modal-content-2">
+					<img src="../images/n4522-kk99-ha+r-3panel.gif" alt="NGC 4522 H-alpha + R 3-panel">
+					<p> desription. </p>
+				</div>
+				<div class="modal-content-2">
+					<img src="../images/n4522-hstimage-colombari-right-orientation.jpg" alt="NGC 4522 HST">
+					<p> desription. </p>
+				</div>
+				<div class="modal-content-2">
+					<img src="../images/n4522-hst-color-nolabel-bigger.jpg" alt="NGC 4522 HST color no labels">
+					<p> desription. </p>
+				</div>
+				<div class="modal-content-2">
+					<img src="../images/4522-structures-labelled.jpg" alt="NGC 4522 structures labelled">
+					<p> desription. </p>
+				</div>
 			</div>
 		</section>
 
@@ -205,10 +220,22 @@
 				<span class="prev" onclick="changeImg(-1, 3)">&#10094;</span>
 				<span class="next" onclick="changeImg(1, 3)">&#10095;</span>
 				<!-- Modal Images -->
-				<img class="modal-content-3" src="../images/n4402-hst-full-nolabel-color-bigger.jpg" alt="NGC 4402 HST full color">
-				<img class="modal-content-3" src="../images/n4402-hst-labelled-rps-features.jpg" alt="NGC 4402 HST features labelled">
-				<img class="modal-content-3" src="../images/ngc4402-hst-east-filament.jpg" alt="NGC 4402 HST east filament">
-				<img class="modal-content-3" src="../images/ngc4402-hst-3filaments.jpg" alt="NGC HST 3 filaments">
+				<div class="modal-content-3">
+					<img src="../images/n4402-hst-full-nolabel-color-bigger.jpg" alt="NGC 4402 HST full color">
+					<p> description. </p>
+				</div>
+				<div class="modal-content-3">
+					<img src="../images/n4402-hst-labelled-rps-features.jpg" alt="NGC 4402 HST features labelled">
+					<p> description. </p>
+				</div>
+				<div class="modal-content-3">
+					<img src="../images/ngc4402-hst-east-filament.jpg" alt="NGC 4402 HST east filament">
+					<p> description. </p>
+				</div>
+				<div class="modal-content-3">
+					<img src="../images/ngc4402-hst-3filaments.jpg" alt="NGC HST 3 filaments">
+					<p> description. </p>
+				</div>
 			</div>
 		</section>
 
@@ -247,10 +274,22 @@
 				<span class="prev" onclick="changeImg(-1, 4)">&#10094;</span>
 				<span class="next" onclick="changeImg(1, 4)">&#10095;</span>
 				<!-- Modal Images -->
-				<img class="modal-content-4" src="../images/IC_3418_UV+opt.jpg" alt="IC 3418 UV and opical">
-				<img class="modal-content-4" src="../images/ic3418-in-virgo.PNG" alt="IC 3418 in Virgo Cluster">
-				<img class="modal-content-4" src="../images/ic3418-Halpha+NUV-fireballs.jpg" alt="IC 3418 H-alpha and near-UV and 'fireballs'">
-				<img class="modal-content-4" src="../images/ic3418-fireball-cartoon.gif" alt="IC 3418 fireball cartoon">
+				<div class="modal-content-4">
+					<img src="../images/IC_3418_UV+opt.jpg" alt="IC 3418 UV and opical">
+					<p> description. </p>
+				</div>
+				<div class="modal-content-4">
+					<img src="../images/ic3418-in-virgo.PNG" alt="IC 3418 in Virgo Cluster">
+					<p> description. </p>
+				</div>
+				<div class="modal-content-4">
+					<img src="../images/ic3418-Halpha+NUV-fireballs.jpg" alt="IC 3418 H-alpha and near-UV and 'fireballs'">
+					<p> description. </p>
+				</div>
+				<div class="modal-content-4">
+					<img src="../images/ic3418-fireball-cartoon.gif" alt="IC 3418 fireball cartoon">
+					<p> description. </p>
+				</div>
 			</div>
 		</section>
 
