--- a/pages/publications.html
+++ b/pages/publications.html
@@ -34,7 +34,7 @@
         <a href="index.html"> Home </a>
         <a href="projects.html"> Research </a>
         <a href="publications.html"> Publications </a>
-        <a href="index.html#contact"> Contact </a>
+        <a href="#contact"> Contact </a>
     </nav>
 
     <main role="main">
@@ -67,6 +67,43 @@
     </main>
 
     <footer>
+
+        <!-- Contact Info -->
+        <div class="center">
+            <h3 id="contact"> Contact Information </h3>
+        </div>
+        <section class="grid-container">
+            <div class="grid-item-txt center">
+                <h4>
+                    <em> Physical and Express Mail </em>
+                </h4>
+                <p>Jeff Kenney</p>
+                <p>Department of Astronomy</p>
+                <p>Steinbach Hall</p>
+                <p>Yale University</p>
+                <p>52 Hillhouse Avenue</p>
+                <p>New Haven, CT 06511, USA</p>
+            </div>
+            <div class="grid-item-txt center">
+                <h4>
+                    <em> Mailing Address </em>
+                </h4>
+                <p>Jeff Kenney</p>
+                <p>Department of Astronomy</p>
+                <p>Yale University</p>
+                <p>PO BOX 208101</p>
+                <p>New Haven, CT 06520-8101, USA</p>
+            </div>
+            <div class="grid-item-txt center">
+                <h4>
+                    <em> Email and Phone: </em>
+                </h4>
+                <p>jeff.kenney@yale.edu</p>
+                <p>(203)-432-3013 (Office)</p>
+                <p>(203)-432-3000 (Astronomy Deparment Office)</p>
+                <p>(203-432-5048 (Fax)</p>
+            </div>
+        </section>
 
     </footer>
 
