Started building media queries for phones.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/normalize.css">
 	<link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<link rel="stylesheet" type="text/css" media="screen and (max-device-width:815px)" href="../css/media-815.css">
 
 	<!-- Scripts -->
 	<script type="text/javascript" src="../scripts/script.js"></script>
@@ -24,7 +25,7 @@
 
 	<header role="banner">
 
-		<div class="center">
+		<div class="head-title center">
 			<h1> Research of Jeffrey Kenney </h1>
 		</div>
 
