--- a/pages/index.html
+++ b/pages/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="../css/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" media="screen and (max-device-width:815px)" href="../css/media-815.css">
 
     <!-- Scripts -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
