Fixed width queries.

--- a/pages/index.html
+++ b/pages/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" type="text/css" href="../css/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
-    <link rel="stylesheet" type="text/css" media="screen and (max-device-width:815px)" href="../css/media-815.css">
+    <link rel="stylesheet" type="text/css" media="screen and (max-device-width:500px)" href="../css/media-500.css">
+    <link rel="stylesheet" type="text/css" media="screen and (min-device-width:501px) and (max-width:800px)" href="../css/media-500-800.css">
 
     <!-- Scripts -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
@@ -97,7 +98,7 @@
         <div class="center">
             <h3 id="contact"> Contact Information </h3>
         </div>
-        <section class="grid-container">
+        <div class="grid-container">
             <div class="grid-item-txt center">
                 <h4>
                     <em> Physical and Express Mail </em>
@@ -128,7 +129,7 @@
                 <p>(203)-432-3000 (Astronomy Deparment Office)</p>
                 <p>(203-432-5048 (Fax)</p>
             </div>
-        </section>
+        </div>
 
     </footer>
 
