--- a/pages/projects.html
+++ b/pages/projects.html
@@ -13,7 +13,8 @@
 	<link rel="stylesheet" type="text/css" href="../css/normalize.css">
 	<link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
-	<link rel="stylesheet" type="text/css" media="screen and (max-device-width:815px)" href="../css/media-815.css">
+	<link rel="stylesheet" type="text/css" media="screen and (max-device-width:500px)" href="../css/media-500.css">
+	<link rel="stylesheet" type="text/css" media="screen and (min-device-width:501px) and (max-width:800px)" href="../css/media-500-800.css">
 
 	<!-- Scripts -->
 	<script type="text/javascript" src="../scripts/script.js"></script>
