Further media edits.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -50,7 +50,7 @@
 				<p> Click on the image to reveal H&alpha; filaments. </p>
 			</div>
 			<!-- Image -->
-			<div id="m86">
+			<div id="m86" class="center">
 				<img id="m86-top" src="../images/m86_2.jpg" onclick="toggleImage()" alt="M86 main">
 				<img src="../images/m86_rg2.jpg" alt="M86 H-alpha">
 			</div>
@@ -304,7 +304,7 @@
         <div class="center">
             <h3 id="contact"> Contact Information </h3>
         </div>
-        <section class="grid-container">
+        <div class="grid-container">
             <div class="grid-item-txt center">
                 <h4>
                     <em> Physical and Express Mail </em>
@@ -335,7 +335,7 @@
                 <p>(203)-432-3000 (Astronomy Deparment Office)</p>
                 <p>(203-432-5048 (Fax)</p>
             </div>
-        </section>
+        </div>
 
     </footer>
 
