--- a/pages/publications.html
+++ b/pages/publications.html
@@ -74,7 +74,7 @@
         <div class="center">
             <h3 id="contact"> Contact Information </h3>
         </div>
-        <section class="grid-container">
+        <div class="grid-container">
             <div class="grid-item-txt center">
                 <h4>
                     <em> Physical and Express Mail </em>
@@ -105,7 +105,7 @@
                 <p>(203)-432-3000 (Astronomy Deparment Office)</p>
                 <p>(203-432-5048 (Fax)</p>
             </div>
-        </section>
+        </div>
 
     </footer>
 
