Added profile image (WIP). Added text to M86.  Changed publication links from arXiv to NASA ADS.

--- a/pages/index.html
+++ b/pages/index.html
@@ -18,7 +18,7 @@
 
     <!-- Scripts -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
-	 crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
 
 </head>
 
@@ -52,42 +52,51 @@
     <main role="main">
 
         <!-- About -->
-        <section id="about" class="center-justify">
-            <h2>About Jeffrey Kenney</h2>
-            <p>
-                As an observational astronomer who investigates the structure and evolution of galaxies, I am most interested in factors
-                that promote and stop star formation. A major focus of my work concerns the environmental impacts on galaxy
-                clusters, particularly molecular gas dynamics and ram pressure stripping. Much of my research has been conducted
-                on the nearby Virgo cluster, which can be studied with good resolution and sensitivity due to its close proximity
-                to our own Milky Way.
-            </p>
+        <section id="about">
+            <h2 class="center">About Jeffrey Kenney</h2>
+            <!-- <div class="col-narrow">
+                <img src="../images/JK-profile.jpg" id="profile-img" alt="Jeffrey Kenney profile picture">
+            </div>
+            <div class="col-wide center-justify"> -->
+            <p class="center-justify"> As an observational astronomer who investigates the structure and evolution of galaxies, I am most interested
+                in factors that promote and stop star formation. A major focus of my work concerns the environmental impacts
+                on galaxy clusters, particularly molecular gas dynamics and ram pressure stripping. Much of my research has
+                been conducted on the nearby Virgo cluster, which can be studied with good resolution and sensitivity due
+                to its close proximity to our own Milky Way. </p>
+            <!-- </div> -->
         </section>
 
         <!-- Teaching -->
         <section>
             <h2 class="center">Teaching at Yale University</h2>
             <!-- ASTR 120 -->
-            <h3><a target="_blank" href="http://www.astro.yale.edu/astro120">
-                Astronomy 120: Galaxies and the Universe
-            </a></h3>
+            <h3>
+                <a target="_blank" href="http://www.astro.yale.edu/astro120">
+                    Astronomy 120: Galaxies and the Universe
+                </a>
+            </h3>
             <p> An introduction to stars and stellar evolution, the structure and evolution of the Milky Way Galaxy and other
                 galaxies; quasars, active galactic nuclei, and supermassive black holes; cosmology and the expanding universe.
                 Intended for non-science majors. </p>
             <!-- ASTR 310 -->
-            <h3><a target="_blank" href="http://www.astro.yale.edu/astro310">
-                Astronomy 310: Galactic and Extragalactic Cosmology
-            </a></h3>
+            <h3>
+                <a target="_blank" href="http://www.astro.yale.edu/astro310">
+                    Astronomy 310: Galactic and Extragalactic Cosmology
+                </a>
+            </h3>
             <p> The structure of the Milky Way galaxy and other galaxies; stellar populations and star clusters in galaxies;
                 gas and star formation in galaxies; the evolution of galaxies; galaxies and their large-scale environment;
                 galaxy mergers and interactions; supermassive black holes and active galactic nuclei. Intended for undergraduate
                 majors in Astronomy and Physics. </p>
             <!-- ASTR 430/530 -->
-            <h3><a target="_blank" href="http://www.astro.yale.edu/astro530">
-                Astronomy 430/530: Galaxies
-            </a></h3>
+            <h3>
+                <a target="_blank" href="http://www.astro.yale.edu/astro530">
+                    Astronomy 430/530: Galaxies
+                </a>
+            </h3>
             <p> A survey of the contents, morphology, structure, and kinematics of galaxies; star formation and the interstellar
                 medium in galaxies; stellar populations and chemical evolution; galaxy interactions and the environments
-                of galaxies, central black holes.  Intended for graduate and advanced undergraduate astronomy majors. </p>
+                of galaxies, central black holes. Intended for graduate and advanced undergraduate astronomy majors. </p>
         </section>
 
     </main>
