--- a/pages/projects.html
+++ b/pages/projects.html
@@ -42,21 +42,37 @@
 
 	<main role="main">
 
-		<!-- Project -->
+		<!-- M86 -->
 		<section>
 			<!-- Project description -->
 			<div>
 				<h2 class="center"> Gas Filaments from the Collision between the Giant Virgo Elliptical M86 and the Spiral Galaxy NGC 4438. </h2>
-				<p> Click on the image to reveal H&alpha; filaments. </p>
+				<p> The giant elliptical galaxy M86 is the dominant galaxy in a subcluster now merging with the rest of the Virgo cluster.
+					Filaments of ionized gas (H-alpha emission) connect M86 and the nearby disturbed spiral galaxy NGC 4438, revealing that
+					they experienced a high-velocity (~1000 km/s) collision about 100 million years ago. (Kenney et al. al
+					<a target="_blank" href="http://adsabs.harvard.edu/abs/2008ApJ...687L..69K">2008</a>). Their collision is not obvious in broadband images, which show starlight, but only when viewed in H-alpha.
+					The collision involved both a gravitational disturbance, changing stellar orbits, and an violent ISM-ISM collision,
+					producing strong shocks and heating. NGC 4438 would have experienced ram pressure stripping and lost much of its gas
+					as it passed through the hot gas halo of M86 (red contour lines in middle panel show X-Ray emission from hot gas). Unusual
+					clouds of HI in M86 (blue contour lines in middle panel) may have originated from gas stolen from NGC 4438 during the
+					collision.
+				</p>
+				<p>
+					In the H-alpha image, the red color is lower velocity H-alpha emission (-600 to +400 km/s), which covers the velocity range
+					of M86 and NGC 4438. The green color is higher velocity H-alpha emission (2000 to 3000 km/s), which covers the velocity
+					range of another nearby spiral NGC 4388, which is experiencing ram pressure stripping from its motion through the Virgo
+					Cluster.
+				</p>
 			</div>
 			<!-- Image -->
+			<p> Click on the image to reveal H-alpha filaments. </p>
 			<div id="m86" class="center">
 				<img id="m86-top" src="../images/m86_2.jpg" onclick="toggleImage()" alt="M86 main">
 				<img src="../images/m86_rg2.jpg" alt="M86 H-alpha">
 			</div>
 		</section>
 
-		<!-- Project -->
+		<!-- NGC 4921 -->
 		<section>
 			<!-- This is shown on page -->
 			<div>
@@ -123,17 +139,18 @@
 			</div>
 		</section>
 
-		<!-- Project -->
+		<!-- NGC 4522 -->
 		<section>
 			<div>
-				<h2 class="center"> Ram Pressure Stripping in NGC 4522 </h2>
+				<h2 class="center"> The Baby Jellyfish Galaxy NGC 4522 </h2>
 				<p> NGC 4522 was one the first spiral galaxies with convincing evidence for ongoing ram pressure stripping, as it shows the
 					HI gas removed from the outside-in, a one-sided tail of HI gas, and an undisturbed stellar disk (Kenney et al.
-					<a target="_blank" href="https://arxiv.org/abs/astro-ph/0403103">2004</a>). It was the first galaxy shown to have star formation in the ram pressure stripped tail (Kenney &amp; Koopmann
-					1999), a phenomenon now known as a “jellyfish galaxy”. High resolution HST images (Abramson et al.
-					<a target="_blank" href="https://arxiv.org/abs/1401.0023">2014</a>,
-					<a target="_blank" href="https://arxiv.org/abs/1604.01883">2016</a>) show small dust clouds that are dense enough to resist the initial stripping, so become decoupled from the
-					rest of the stripped ISM, but then become ablated to form linear filamentary clouds. </p>
+					<a target="_blank" href="http://adsabs.harvard.edu/abs/2004AJ....127.3361K">2004</a>). It was the first galaxy shown to have star formation in the ram pressure stripped tail (Kenney &amp; Koopmann
+					<a target="_blank" href="http://adsabs.harvard.edu/abs/1999AJ....117..181K">1999</a>), a phenomenon now known as a “jellyfish galaxy”. High resolution HST images (Abramson et al.
+					<a target="_blank" href="http://adsabs.harvard.edu/abs/2014AJ....147...63A">2014</a>,
+					<a target="_blank" href="http://adsabs.harvard.edu/abs/2016AJ....152...32A">2016</a>) show small dust clouds that are dense enough to resist the initial stripping, so become decoupled from the
+					rest of the stripped ISM, but then become ablated to form linear filamentary clouds.
+				</p>
 			</div>
 			<!-- Images for NGC 4522 -->
 			<div class="grid-container">
@@ -185,19 +202,20 @@
 			</div>
 		</section>
 
-		<!-- Project -->
+		<!-- NGC 4402 -->
 		<section>
 			<div>
-				<h2 class="center"> Ram Pressure Stripping in NGC 4402 </h2>
+				<h2 class="center"> Large Filaments of Decoupled Dense Gas in NGC 4402 </h2>
 				<p> The spiral galaxy NGC 4402 is a great example of active ram pressure stripping in the Virgo Cluster. Whereas NGC 4522
 					is moving away from us in the cluster, NGC 4402 is moving toward us, so that the leading side of the ram pressure interaction
 					is the near side. Thus we can see the strong impacts on the leading side more clearly. HST images (Abramson et al.
-					<a target="_blank" href="https://arxiv.org/abs/1401.0023">2014</a>,
-					<a target="_blank" href="https://arxiv.org/abs/1604.01883">2016</a>) show that the outer disk has virtually no dust, since it has been stripped by ram pressure. Iirregular filaments
+					<a target="_blank" href="http://adsabs.harvard.edu/abs/2014AJ....147...63A">2014</a>,
+					<a target="_blank" href="http://adsabs.harvard.edu/abs/2016AJ....152...32A">2016</a>) show that the outer disk has virtually no dust, since it has been stripped by ram pressure. Iirregular filaments
 					of dust blown out of the galaxy can be seen extending to the northwest (upper right). Near the outer edge of the stripped
 					dust disk, there are 2 large linear filaments that protrude outwards beyond the main stripping radius. These originate
 					from dense clouds which resist the initial stripping, so become decoupled from the rest of the stripped ISM, but then
-					become ablated to form linear filamentary clouds. One of these has a complex of young stars at its head. </p>
+					become ablated to form linear filamentary clouds. One of these has a complex of young stars at its head.
+				</p>
 			</div>
 			<!-- Images for NGC 4402 -->
 			<div class="grid-container">
@@ -241,17 +259,18 @@
 			</div>
 		</section>
 
-		<!-- Project -->
+		<!-- IC 3418 -->
 		<section>
 			<div>
-				<h2 class="center"> Star Formation via Ram Pressure Stripping in IC 3418 </h2>
+				<h2 class="center"> Transformation of a Dwarf Galaxy by Ram Pressure Stripping and the Fireball Tail of IC3418 </h2>
 				<p> IC3418 is a dwarf galaxy in the Virgo Cluster that is in the process of transforming from a late type dwarf to an early
 					type dwarf (“dwarf elliptical”) due to ram pressure stripping. It stopped forming stars 200 Myr ago and has no gas,
 					but does have a spectacular tail of young stars that is prominent in the UV (GALEX image), formed by ram pressure stripping.
 					Many of the young stars in the tail form linear parallel streams with HII regions of ionized gas at the heads. These
 					features have been called “fireballs”, and probably form as ram pressure continues to accelerate the gas, but doesn’t
 					affect the stars which therefor get left behind, as depicted in the cartoon (Kenney et al.
-					<a target="_blank" href="https://arxiv.org/abs/1311.5501">2014</a>). </p>
+					<a target="_blank" href="http://adsabs.harvard.edu/abs/2014ApJ...780..119K">2014</a>).
+				</p>
 			</div>
 			<!-- Images for IC 3418 -->
 			<div class="grid-container">
@@ -300,44 +319,44 @@
 
 	<footer>
 
-        <!-- Contact Info -->
-        <div class="center">
-            <h3 id="contact"> Contact Information </h3>
-        </div>
-        <div class="grid-container">
-            <div class="grid-item-txt center">
-                <h4>
-                    <em> Physical and Express Mail </em>
-                </h4>
-                <p>Jeff Kenney</p>
-                <p>Department of Astronomy</p>
-                <p>Steinbach Hall</p>
-                <p>Yale University</p>
-                <p>52 Hillhouse Avenue</p>
-                <p>New Haven, CT 06511, USA</p>
-            </div>
-            <div class="grid-item-txt center">
-                <h4>
-                    <em> Mailing Address </em>
-                </h4>
-                <p>Jeff Kenney</p>
-                <p>Department of Astronomy</p>
-                <p>Yale University</p>
-                <p>PO BOX 208101</p>
-                <p>New Haven, CT 06520-8101, USA</p>
-            </div>
-            <div class="grid-item-txt center">
-                <h4>
-                    <em> Email and Phone: </em>
-                </h4>
-                <p>jeff.kenney@yale.edu</p>
-                <p>(203)-432-3013 (Office)</p>
-                <p>(203)-432-3000 (Astronomy Deparment Office)</p>
-                <p>(203-432-5048 (Fax)</p>
-            </div>
-        </div>
+		<!-- Contact Info -->
+		<div class="center">
+			<h3 id="contact"> Contact Information </h3>
+		</div>
+		<div class="grid-container">
+			<div class="grid-item-txt center">
+				<h4>
+					<em> Physical and Express Mail </em>
+				</h4>
+				<p>Jeff Kenney</p>
+				<p>Department of Astronomy</p>
+				<p>Steinbach Hall</p>
+				<p>Yale University</p>
+				<p>52 Hillhouse Avenue</p>
+				<p>New Haven, CT 06511, USA</p>
+			</div>
+			<div class="grid-item-txt center">
+				<h4>
+					<em> Mailing Address </em>
+				</h4>
+				<p>Jeff Kenney</p>
+				<p>Department of Astronomy</p>
+				<p>Yale University</p>
+				<p>PO BOX 208101</p>
+				<p>New Haven, CT 06520-8101, USA</p>
+			</div>
+			<div class="grid-item-txt center">
+				<h4>
+					<em> Email and Phone: </em>
+				</h4>
+				<p>jeff.kenney@yale.edu</p>
+				<p>(203)-432-3013 (Office)</p>
+				<p>(203)-432-3000 (Astronomy Deparment Office)</p>
+				<p>(203-432-5048 (Fax)</p>
+			</div>
+		</div>
 
-    </footer>
+	</footer>
 
 </body>
 
